--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -24,13 +24,13 @@ body {
     }
 
     &::before {
-        content:'';
+        content: '';
         position: absolute;
         top: 0;
         right: 0;
         width: 100%;
-        height:100%;
-        background-color: rgba(0,0,0,0);
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0);
     }
 
     .menu {
@@ -49,22 +49,23 @@ body {
     .header__bottom {
         position: absolute;
         bottom: 0;
-        right:0;
-        width:100%;
-        height:calc(50% - 40px);
-        background-color: rgba(0,0,0,.5)
+        right: 0;
+        width: 100%;
+        height: calc(50% - 40px);
+        background-color: rgba(0, 0, 0, .5)
     }
 }
 
 .services {
     padding: 40px 0;
+
     .services__item {
         text-align: center;
 
         @media(max-width:991px) {
             margin-bottom: 15px;
         }
- 
+
         img {
             margin: auto;
         }
@@ -75,6 +76,7 @@ body {
             color: #222;
             margin-top: 10px;
         }
+
         .services__item__desc {
             font-weight: 500;
             font-size: 13px;
@@ -94,9 +96,10 @@ body {
         text-align: center;
         margin-bottom: 20px;
         font-weight: 600;
-        color: #0F7DC2 !important;
+        color: #0fc239 !important;
         font-size: 16px;
     }
+
     .box__desc {
         color: #222;
         font-size: 13px;
@@ -118,7 +121,7 @@ body {
         text-align: center;
         margin-bottom: 0px;
         font-weight: 600;
-        color: #0F7DC2 !important;
+        color: #0fc239 !important;
         font-size: 16px;
     }
 
@@ -126,7 +129,7 @@ body {
         @media(max-width:500px) {
             margin-top: 20px;
         }
-     }
+    }
 }
 
 .footer {
@@ -137,7 +140,7 @@ body {
     font-family: "MyriadArabic";
 
     a {
-        color: #0F7DC2 !important;
+        color: #0fc239 !important
     }
 }
 
@@ -146,14 +149,17 @@ body {
     border-color: transparent;
 }
 
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+.navbar-inverse .navbar-nav>.active>a,
+.navbar-inverse .navbar-nav>.active>a:focus,
+.navbar-inverse .navbar-nav>.active>a:hover {
     background-color: transparent;
-    color: #0F7DC2 !important;
+    color: #0fc239 !important;
 }
 
-.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
+.navbar-inverse .navbar-nav>li>a:focus,
+.navbar-inverse .navbar-nav>li>a:hover {
     background-color: transparent;
-    color: #0F7DC2 !important;
+    color: #0fc239 !important;
 }
 
 .navbar {
@@ -168,10 +174,12 @@ body {
     background-color: #000;
 }
 
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover {
     background-color: transparent;
 }
 
-.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+.navbar-inverse .navbar-collapse,
+.navbar-inverse .navbar-form {
     border-color: blue;
 }
