--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -5,7 +5,7 @@ body {
 
 .header {
     background-image: url(../img/header.jpg);
-    height: calc(100vh);
+    height: calc(500px);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -23,16 +23,6 @@ body {
         font-size: 16px;
     }
 
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0);
-    }
-
     .menu {
         padding: 10px 0;
         border-bottom: 1px solid #e1e1e1;
@@ -46,14 +36,6 @@ body {
         }
     }
 
-    .header__bottom {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: calc(50% - 40px);
-        background-color: rgba(0, 0, 0, .5)
-    }
 }
 
 .services {
@@ -97,7 +79,8 @@ body {
         margin-bottom: 20px;
         font-weight: 600;
         color: #0fc239 !important;
-        font-size: 16px;
+        font-size: 20px;
+        font-family: "MyriadArabic";
     }
 
     .box__desc {
@@ -122,7 +105,8 @@ body {
         margin-bottom: 0px;
         font-weight: 600;
         color: #0fc239 !important;
-        font-size: 16px;
+        font-size: 20px;
+        font-family: "MyriadArabic";
     }
 
     .customer__img {
@@ -182,4 +166,18 @@ body {
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
     border-color: blue;
+}
+
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+    color: transparent;
+    background-color: transparent;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+    text-decoration: none;
+    background-color: transparent;
+}
+
+.nav.nav-pills {
+    margin-top: -40px;
 }
