--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -1,11 +1,12 @@
 body {
     margin: 0;
-    font-family: IRANSans;
+    font-family: "MyriadArabic";
+    font-size: 16px;
 }
 
 .header {
     background-image: url(../img/header.jpg);
-    height: calc(500px);
+    padding: 0px 0 70px;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -36,6 +37,12 @@ body {
         }
     }
 
+    .header__tab {
+        background-color: rgba(0,0,0,.5);
+        margin-top: 30px;
+        border-radius: 4px;
+        padding: 10px;
+    }
 }
 
 .services {
@@ -54,14 +61,14 @@ body {
 
         .services__item__title {
             font-weight: bold;
-            font-size: 13px;
+            font-size: 16px;
             color: #222;
             margin-top: 10px;
         }
 
         .services__item__desc {
             font-weight: 500;
-            font-size: 13px;
+            font-size: 16px;
             color: #555;
             line-height: 20px;
             margin-top: 10px;
@@ -70,7 +77,7 @@ body {
 }
 
 .box {
-    box-shadow: 0px 0px 10px #999;
+    box-shadow: 0px 0px 4px #999;
     padding: 50px 0;
     margin: 50px 0;
 
@@ -85,7 +92,7 @@ body {
 
     .box__desc {
         color: #222;
-        font-size: 13px;
+        font-size: 16px;
         line-height: 30px;
         text-align: justify;
         font-weight: 500;
@@ -168,16 +175,22 @@ body {
     border-color: blue;
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
-    color: transparent;
-    background-color: transparent;
+.tab-content {
+    background-color: #fff;
+    padding: 25px 10px 10px;
 }
 
-.nav>li>a:focus, .nav>li>a:hover {
-    text-decoration: none;
-    background-color: transparent;
+.nav-tabs>li>a {
+    color: #fff;
 }
 
-.nav.nav-pills {
-    margin-top: -40px;
+.form-group {
+    position: relative;
+}
+
+.form-group > i {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    color: #969393;
 }
