--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -11,6 +11,10 @@ body {
     background-size: cover;
     position: relative;
 
+    @media(max-width:767px) {
+        padding: 0;
+    }
+
     .header__title {
         font-family: "MyriadArabic";
         text-align: center;
@@ -42,6 +46,10 @@ body {
         margin-top: 30px;
         border-radius: 4px;
         padding: 10px;
+
+        @media(max-width:767px) {
+            border-radius: 0px;
+        }
     }
 }
 
@@ -182,6 +190,7 @@ body {
 
 .nav-tabs>li>a {
     color: #fff;
+    font-size: 20px;
 }
 
 .form-group {
@@ -193,4 +202,138 @@ body {
     top: 8px;
     left: 8px;
     color: #969393;
+}
+
+.nav-tabs>li>a:hover {
+    background-color: transparent;
+    border-color:transparent;
+}
+
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+
+
+label{
+	position: relative;
+	cursor: pointer;
+	color: #666;
+	font-size: 30px;
+}
+
+input[type="checkbox"], input[type="radio"]{
+	position: absolute;
+    visibility: hidden;
+}
+
+/*Check box*/
+input[type="checkbox"] + .label-text:before{
+	content: "\f096";
+	font-family: "FontAwesome";
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing:antialiased;
+	width: 1em;
+	display: inline-block;
+	margin-right: 5px;
+}
+
+input[type="checkbox"]:checked + .label-text:before{
+	content: "\f14a";
+	color: #2980b9;
+	animation: effect 250ms ease-in;
+}
+
+input[type="checkbox"]:disabled + .label-text{
+	color: #aaa;
+}
+
+input[type="checkbox"]:disabled + .label-text:before{
+	content: "\f0c8";
+	color: #ccc;
+}
+
+/*Radio box*/
+
+input[type="radio"] + .label-text:before{
+	content: "\f10c";
+	font-family: "FontAwesome";
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing:antialiased;
+	width: 1em;
+	display: inline-block;
+	margin-right: 5px;
+}
+
+input[type="radio"]:checked + .label-text:before{
+	content: "\f192";
+    color: #61ad44;
+	animation: effect 250ms ease-in;
+}
+
+input[type="radio"]:disabled + .label-text{
+	color: #aaa;
+}
+
+input[type="radio"]:disabled + .label-text:before{
+	content: "\f111";
+	color: #ccc;
+}
+
+/*Radio Toggle*/
+
+.toggle input[type="radio"] + .label-text:before{
+	content: "\f204";
+	font-family: "FontAwesome";
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing:antialiased;
+	width: 1em;
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.toggle input[type="radio"]:checked + .label-text:before{
+	content: "\f205";
+	color: #16a085;
+	animation: effect 250ms ease-in;
+}
+
+.toggle input[type="radio"]:disabled + .label-text{
+	color: #aaa;
+}
+
+.toggle input[type="radio"]:disabled + .label-text:before{
+	content: "\f204";
+	color: #ccc;
+}
+
+
+@keyframes effect{
+	0%{transform: scale(0);}
+	25%{transform: scale(1.3);}
+	75%{transform: scale(1.4);}
+	100%{transform: scale(1);}
+}
+
+label {
+    font-size: 16px;
+}
+
+.form-control:focus {
+    border-color: #21ce21;
+    box-shadow: inset 0 1px 1px #21ce21, 0 0 8px #21ce21;
 }
