modify menu responsive

--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -180,7 +180,7 @@ body {
 
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-    border-color: blue;
+    border-color: #10d83f;
 }
 
 .tab-content {
