--- a/src/sass/components/flight.scss
+++ b/src/sass/components/flight.scss
@@ -38,7 +38,7 @@
             border-radius: 5px;
             background-color: #fff;
             box-shadow: 0px 0px 10px #ccc;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
 
             .wrapper__main__box__item {
 
@@ -96,6 +96,20 @@
                             width:120px;
                         }
                     }
+                }
+
+                .wrapper__main__box__item__more {
+                    position: absolute;
+                    bottom: -12px;
+                    right: calc(50% - 30px);
+                    width:30px;
+                    height:30px;
+                    border: 1px solid green;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    cursor: pointer;
                 }
             }
 
