--- a/src/sass/components/flight.scss
+++ b/src/sass/components/flight.scss
@@ -127,6 +127,27 @@
                 font-weight: 500;
                 top: 36px;
             }
+
+            .wrapper__main__box__detail {
+                padding: 10px;
+                border-top: 1px dotted #ccc;
+                margin-top: 15px;
+                display: flex;
+
+                @media(max-width:767px) {
+                    flex-direction: column;
+                }
+                
+                .wrapper__main__box__detail__left {
+                    padding: 5px;
+                    margin-right: 10px;
+                    width:280px;
+
+                    @media(max-width:767px) {
+                        width:100%;
+                    }
+                }
+            }
         }
     }
 
@@ -153,6 +174,11 @@
         font-size: 14px;
         color: #444;
         font-weight: bold;
+
+        // &.in-progress {
+        //     color: green;
+        //     font-size: 16px;
+        // }
 
         &::before {
             content: '';
@@ -236,4 +262,8 @@
         top: -8px;
         transform: rotate(225deg);
     }
+}
+
+.table thead tr th , .table tbody tr td {
+    text-align: center;
 }
