--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -29,7 +29,7 @@ body {
     }
 
     .header__tab {
-        background-color: rgba(0,0,0,.5);
+        background-color: rgba(0, 0, 0, .5);
         margin-top: 80px;
         border-radius: 4px;
         padding: 10px;
@@ -198,7 +198,7 @@ body {
     position: relative;
 }
 
-.form-group > i {
+.form-group>i {
     position: absolute;
     top: 8px;
     left: 8px;
@@ -208,7 +208,7 @@ body {
 
 .nav-tabs>li>a:hover {
     background-color: transparent;
-    border-color:transparent;
+    border-color: transparent;
 }
 
 .margin-bottom-10 {
@@ -216,132 +216,144 @@ body {
 }
 
 
-label{
-	position: relative;
-	cursor: pointer;
-	color: #666;
-	font-size: 30px;
+label {
+    position: relative;
+    cursor: pointer;
+    color: #666;
+    font-size: 30px;
 }
 
-input[type="checkbox"], input[type="radio"]{
-	position: absolute;
+input[type="checkbox"],
+input[type="radio"] {
+    position: absolute;
     visibility: hidden;
 }
 
 /*Check box*/
-input[type="checkbox"] + .label-text:before{
-	content: "\f096";
-	font-family: "FontAwesome";
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing:antialiased;
-	width: 1em;
-	display: inline-block;
+input[type="checkbox"]+.label-text:before {
+    content: "\f096";
+    font-family: "FontAwesome";
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    width: 1em;
+    display: inline-block;
     margin-right: 5px;
     position: relative;
     top: 4px;
 }
 
-.form-check label  {
+.form-check label {
     position: relative;
 }
 
-.form-check label  .price {
+.form-check label .price {
     color: #999;
     position: absolute;
-    left:0;
+    left: 0;
     font-size: 14px;
 }
 
-input[type="checkbox"]:checked + .label-text:before{
-	content: "\f14a";
-	color: #2980b9;
-	animation: effect 250ms ease-in;
+input[type="checkbox"]:checked+.label-text:before {
+    content: "\f14a";
+    color: #2980b9;
+    animation: effect 250ms ease-in;
 }
 
-input[type="checkbox"]:disabled + .label-text{
-	color: #aaa;
+input[type="checkbox"]:disabled+.label-text {
+    color: #aaa;
 }
 
-input[type="checkbox"]:disabled + .label-text:before{
-	content: "\f0c8";
-	color: #ccc;
+input[type="checkbox"]:disabled+.label-text:before {
+    content: "\f0c8";
+    color: #ccc;
 }
 
 /*Radio box*/
 
-input[type="radio"] + .label-text:before{
-	content: "\f10c";
-	font-family: "FontAwesome";
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing:antialiased;
-	width: 1em;
-	display: inline-block;
-	margin-right: 5px;
+input[type="radio"]+.label-text:before {
+    content: "\f10c";
+    font-family: "FontAwesome";
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    width: 1em;
+    display: inline-block;
+    margin-right: 5px;
 }
 
-input[type="radio"]:checked + .label-text:before{
-	content: "\f192";
+input[type="radio"]:checked+.label-text:before {
+    content: "\f192";
     color: #61ad44;
-	animation: effect 250ms ease-in;
+    animation: effect 250ms ease-in;
 }
 
-input[type="radio"]:disabled + .label-text{
-	color: #aaa;
+input[type="radio"]:disabled+.label-text {
+    color: #aaa;
 }
 
-input[type="radio"]:disabled + .label-text:before{
-	content: "\f111";
-	color: #ccc;
+input[type="radio"]:disabled+.label-text:before {
+    content: "\f111";
+    color: #ccc;
 }
 
 /*Radio Toggle*/
 
-.toggle input[type="radio"] + .label-text:before{
-	content: "\f204";
-	font-family: "FontAwesome";
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing:antialiased;
-	width: 1em;
-	display: inline-block;
-	margin-right: 10px;
+.toggle input[type="radio"]+.label-text:before {
+    content: "\f204";
+    font-family: "FontAwesome";
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    width: 1em;
+    display: inline-block;
+    margin-right: 10px;
 }
 
-.toggle input[type="radio"]:checked + .label-text:before{
-	content: "\f205";
-	color: #16a085;
-	animation: effect 250ms ease-in;
+.toggle input[type="radio"]:checked+.label-text:before {
+    content: "\f205";
+    color: #16a085;
+    animation: effect 250ms ease-in;
 }
 
-.toggle input[type="radio"]:disabled + .label-text{
-	color: #aaa;
+.toggle input[type="radio"]:disabled+.label-text {
+    color: #aaa;
 }
 
-.toggle input[type="radio"]:disabled + .label-text:before{
-	content: "\f204";
-	color: #ccc;
+.toggle input[type="radio"]:disabled+.label-text:before {
+    content: "\f204";
+    color: #ccc;
 }
 
 
-@keyframes effect{
-	0%{transform: scale(0);}
-	25%{transform: scale(1.3);}
-	75%{transform: scale(1.4);}
-	100%{transform: scale(1);}
+@keyframes effect {
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.3);
+    }
+
+    75% {
+        transform: scale(1.4);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 label {
@@ -362,9 +374,46 @@ label {
 }
 
 .width-100 {
-    width:100%;
+    width: 100%;
 }
 
-.weight-600  {
+.weight-600 {
     font-weight: 600;
+}
+
+input[type="checkbox"]:checked+.label-text:before {
+    color: green;
+}
+
+.dropdown-menu {
+    padding: 10px;
+    width: 200px;
+
+    .dropdown-menu__item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 5px 0;
+
+        .dropdown-menu__item__title,
+        .dropdown-menu__item__price {
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .dropdown-menu__item__btn {
+            color: #999;
+            font-size: 10px;
+            margin: 0 2px;
+            i {
+                position: relative;
+                top: 1px;
+            }
+        }
+    }
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
