--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -362,7 +362,7 @@ label {
 
 .form-control:focus {
     border-color: #21ce21;
-    box-shadow: inset 0 1px 1px #21ce21, 0 0 8px #21ce21;
+    box-shadow: inset 0 1px 1px #21ce21, 0 0 1px #21ce21;
 }
 
 .tooltip-inner {
@@ -389,6 +389,10 @@ input[type="checkbox"]:checked+.label-text:before {
     padding: 10px;
     width: 200px;
 
+    @media(max-width:767px) {
+        width:100%;
+    }
+
     .dropdown-menu__item {
         display: flex;
         align-items: center;
@@ -405,6 +409,7 @@ input[type="checkbox"]:checked+.label-text:before {
             color: #999;
             font-size: 10px;
             margin: 0 2px;
+
             i {
                 position: relative;
                 top: 1px;
@@ -416,4 +421,22 @@ input[type="checkbox"]:checked+.label-text:before {
 select {
     -webkit-appearance: none;
     -moz-appearance: none;
+}
+
+.dropdown-menu>li>a {
+    font-weight: 600;
+    font-size: 16px;
+    padding: 3px 0px;
+    color: #919191;
+
+    i {
+        color: #919191;
+        position: relative;
+        top: 4px;
+        margin-left: 6px;
+    }
+}
+
+.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
+    background-color: #5cb85c;
 }
