--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -440,3 +440,11 @@ select {
 .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
     background-color: #5cb85c;
 }
+
+.padding-0 {
+    padding: 0px !important;
+}
+
+.padding-10 {
+    padding: 10px !important;
+}
