--- a/src/sass/components/flight.scss
+++ b/src/sass/components/flight.scss
@@ -63,6 +63,15 @@
             box-shadow: 0px 0px 10px #ccc;
             margin-bottom: 20px;
 
+            .wrapper__main__box__title {
+                text-align: right;
+                font-size: 16px;
+                font-weight: 600;
+                padding-bottom: 15px;
+                border-bottom: 1px dotted #ccc;
+                padding: 10px;
+            }
+
             .wrapper__main__box__item {
 
                 display: flex;
