--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -476,3 +476,16 @@ select {
 .pwt-btn-today , .pwt-btn-calendar , .datepicker-navigator {
     font-size: 16px !important;
 }
+
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover {
+    background-color: transparent;
+    color: #9d9d9d;
+}
+
+.navbar-inverse .navbar-nav .open .dropdown-menu>li>a:focus, .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
+    color: #9d9d9d;
+}
+
+.text-success {
+    color: green;
+}
