--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -10,7 +10,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    z-index: 100000;
 
     @media(max-width:767px) {
         padding: 10px 0 0;
@@ -44,12 +43,10 @@ body {
 
 .menu {
     padding: 0px 0;
-    border-bottom: 1px solid #e1e1e1;
     z-index: 1000;
     position: relative;
     background-color: #fff;
-    box-shadow: 0px 0px 10px #ccc; 
-    height: 53px;   
+    box-shadow: 0px 0px 10px #ccc;       
 
     @media(max-width:767px) {
         height: auto;
@@ -153,6 +150,11 @@ body {
 .navbar-inverse {
     background-color: transparent;
     border-color: transparent;
+    height: 52px;
+
+    @media (max-width: 768px) {
+        height: auto;
+    }
 }
 
 .navbar-inverse .navbar-nav>li>a {
@@ -166,9 +168,13 @@ body {
         width:10px;
         height: 10px;
         background-color: transparent;
-        bottom: -6px;
+        bottom: 0px;
         left: calc(50% - 8px);
-        transform: rotate(45deg);
+        width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-bottom: 20px solid transparent;
     }
 }
 
@@ -181,7 +187,7 @@ body {
     font-weight: 600;
 
     &::before {
-        background-color: #0fc239;
+        border-bottom: 8px solid #0fc239;
     }
 }
 
@@ -193,7 +199,7 @@ body {
     font-weight: 600;
 
     &::before {
-        background-color: #0fc239;
+        border-bottom: 8px solid #0fc239;
     }
 }
 
@@ -592,12 +598,20 @@ select {
     }
 }
 
-.btn-success {    background-image: linear-gradient(to left, #44ddbf 0%, #3bcf23 51%, #16A085 100%);}
-.btn-success:hover { background-position: left top; }
+.btn-success {  background-image: linear-gradient(to left, #44ddbf 0%, #3bcf23 51%, #16A085 100%);transition: all 0.3s;}
+.btn-success:hover {  background-image: linear-gradient(to right, #44ddbf 0%, #3bcf23 51%, #16A085 100%) !important;}
 
 .glyphicon {
-    font-size: 13px;
+    font-size: 12px;
 }
+
+@media (min-width: 768px) {
+    .navbar-nav>li {
+        float: right;
+        margin-left: 1px;
+    }
+}
+
 
 
 
