--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-    background-image: url(../img/header.jpg);
+    background-image: url(../img/header4.jpg);
     padding: 30px 0 100px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,11 +16,22 @@ body {
         margin-top: -20px;
     }
 
+    &::before {
+        position:absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        top: 0;
+        background-color: rgba(0,0,0,0.3);
+        z-index: 0;
+    }
+
     .header__title {
         font-family: "MyriadArabic";
         text-align: center;
         color: #fff;
         text-shadow: 0px 0px 10px #ccc;
+        position: relative;
     }
 
     .header__desc {
@@ -30,6 +41,7 @@ body {
         font-size: 16px;
         color: #fff;
         text-shadow: 0px 0px 10px #ccc;
+        position: relative;
     }
 
     .header__tab {
@@ -37,6 +49,7 @@ body {
         margin-top: 80px;
         border-radius: 4px;
         padding: 10px;
+        position: relative;
 
         @media(max-width:767px) {
             border-radius: 0px;
