--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -137,7 +137,7 @@ body {
 }
 
 .box {
-    box-shadow: 0px 0px 4px #999;
+    background-color: #f8f8f8;
     padding: 50px 0;
     margin: 50px 0;
 
