--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -761,3 +761,15 @@ a {
 .form-control[readonly] {
     background-color: transparent;
 }
+
+.toast-success {
+    background-color: #00a126;
+}
+
+.toast-success {
+    background-color: #00a126;
+} 
+
+button.toast-close-button{
+    top: 0;
+}
