--- a/src/sass/components/_code.scss
+++ b/src/sass/components/_code.scss
@@ -783,3 +783,29 @@ button.toast-close-button{
 .datepicker-container .header::before {
     background-color: transparent !important;
 }
+
+.has-error .checkbox, .has-error .checkbox-inline, .has-error .control-label, .has-error .help-block, .has-error .radio, .has-error .radio-inline, .has-error.checkbox label, .has-error.checkbox-inline label, .has-error.radio label, .has-error.radio-inline label {
+    color: #a94442;
+    width: 100%;
+    position: absolute;
+    top: -8px;
+    background-color: #fff;
+    box-shadow: 0px 0px 4px #a94442;;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 15px;
+    padding: 2px;
+}
+
+.help-block::before {
+    position: absolute;
+    content: '';
+    top: 25px;
+    left: calc(50% + 2px);
+    width: 0;
+    height: 0;
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
+    border-bottom: 6px solid #a10b0b;
+    transform: rotate(178deg);
+}
